# llm-evidence-gated-generation

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRACT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  trace_schema.json
.github/workflows/: ci.yml
artifacts/: calibration.json  calibration.top10.json  policy.best.json
data/: benchmark_example.jsonl
data/cli_eval_safe_c6789358e90e495499b2b66ad4b61497/: dataset.jsonl
data/cli_test_c6f0d645aa4e4d68aaa3a533743bfb02/: conformal.json  evidence.json  scores.jsonl
data/manual_model_wiring_checks/: dataset.jsonl  debug.jsonl  summary.json
data/safe_eval_5ef9f490ca354a3488d9f267ba39a51f/: dataset.jsonl  pilot_debug_examples.jsonl  summary.json
demos/: README.md  large_evidence.json  minimal_rag_like_flow.py
demos/pipeline_demo/: polished_bad.json  scores.jsonl
demos/v2/: eval_dataset_tiny.jsonl  run_pipeline_with_reranker.sh  safe_answer_example.md
docs/: README.md  SKILL.md  alpha_feedback.md  alpha_validation.md  arxiv_paper_outline.md  poc_results.md  release_checklist.md  technical_post_v1_public.md  v2.md  v2_eval_dataset.md  v4_beta_criteria.md  v4_beta_feedback.md  v4_beta_readiness.md  v4_beta_validation_matrix.md  v4_conformal_authority_spec.md  v4_field_aware_bm25_spec.md  v4_implementation_note.md  v4_output_schemas.md  v4_stable_criteria.md
examples/: large_summary.txt  minimal.py  run_pipeline_demo.sh  summarize_result.py
examples/pipeline_demo/: evidence.json  llm_summary.txt  polished_ok.json
examples/v2/: conformal_calibration_tiny.jsonl  eval_dataset_pilot.jsonl  run_conformal_fit.sh  run_v2_eval.sh  training_example_row.json
runs/manual_handoff_checks/: conformal.json  dataset.jsonl  debug.jsonl  out.json
runs/v2_compare/calibration/: calib_rows.json  conformal_state.json  pilot_conformal_state.json
runs/v2_compare/eval/: baseline.json  final_poc_summary.json  full_compare.json  pilot_after_pair_fix.json  pilot_after_verifier_fix.json  pilot_budget_enforced.json  pilot_budget_tuned.json  pilot_compare.json  pilot_compare_debugged.json  pilot_compare_fixed.json  pilot_debug_examples.jsonl  pilot_threshold_005.json  pilot_threshold_005_recalibrated.json  threshold_sweep.json
scripts/: benchmark_verifier.py  perf_gate.py  perf_smoke.py  pytest_wrapper.py  reproduce_poc.sh  validate_trace_jsonl.py
src/ega/: __init__.py  api.py  benchmark.py  cli.py  config.py  contract.py  decision.py  enforcer.py  events.py  pipeline.py  policy.py  schemas.py  serialization.py  text_clean.py  types.py  unitization.py  unitization_spacy.py  version.py
src/ega/adapters/: __init__.py  wandb_sink.py
src/ega/cli/: __init__.py  pipeline.py  report.py  run.py  shell.py  v2.py
src/ega/core/: __init__.py  correction.py  pipeline_core.py
src/ega/interfaces/: __init__.py  verifier.py
src/ega/polish/: __init__.py  gate.py  types.py  validators.py
src/ega/providers/: __init__.py  base.py  jsonl_scores.py
src/ega/utils/: summarize.py
src/ega/v2/: __init__.py  budget.py  budget_greedy.py  calibrate.py  conformal.py  coverage.py  cross_encoder_reranker.py  eval_harness.py  export_calibration_rows.py  poc_config.py  poc_release.py  render.py  reranker.py  rewards.py  risk.py  threshold_sweep.py
src/ega/verifiers/: __init__.py  adapter.py  nli_cross_encoder.py
tests/: test_alpha_validation_v4.py  test_api.py  test_authority_decision.py  test_benchmark_script.py  test_benchmark_smoke.py  test_budget_greedy.py  test_calibration.py  test_calibration_no_reload.py  test_cli.py  test_cli_coverage_rewards_args.py  test_cli_paths.py  test_cli_pipeline_device_dtype.py  test_cli_polish_validate.py  test_cli_v2_args.py  test_conformal_calibration.py  test_conformal_state_v4.py  test_contract_freeze.py  test_coverage.py  test_cross_encoder_reranker_no_dep.py  test_cross_encoder_reranker_smoke.py  test_decision.py  test_default_model_name.py  test_distribution_drift.py  test_e2e_gating.py  test_enforcer_formatting.py  test_enforcer_verify_many.py  test_eval_dataset_pilot_schema.py  test_eval_harness_finalize_metrics.py  test_eval_harness_reports_coverage_rewards.py  test_events.py  test_export_calibration_rows.py  test_field_aware_bm25.py  test_imports.py  test_nli_cross_encoder.py  test_nli_integration.py  test_optional_imports.py  test_output_schemas.py  test_pending_contract.py  test_pipeline_budget_behavior.py  test_pipeline_canonical.py  (+34 more)
