[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ega"
version = "0.1.0"
description = "Evidence-Gated Answering (EGA): an enforcement and decision layer for grounded answering."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Apache-2.0" }
authors = [
  { name = "EGA Contributors" }
]
maintainers = [
  { name = "EGA Maintainers", email = "opensource@example.com" }
]
keywords = ["llm", "grounding", "verification", "policy", "enforcement"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/REPLACE_ME/ega"
Repository = "https://github.com/REPLACE_ME/ega"
Issues = "https://github.com/REPLACE_ME/ega/issues"

[project.optional-dependencies]
unitize = [
  "spacy>=3.7,<4.0"
]
nli = [
  "torch>=2.0; platform_system!='Darwin' or platform_machine!='arm64'",
  "transformers>=4.40",
  "sentencepiece",
  "accelerate",
  "rank_bm25"
]
rerank = [
  "sentence-transformers>=2.7"
]
wandb = [
  "wandb>=0.16"
]
all = [
  "spacy>=3.7,<4.0",
  "torch>=2.0; platform_system!='Darwin' or platform_machine!='arm64'",
  "transformers>=4.40",
  "sentencepiece",
  "accelerate",
  "rank_bm25",
  "sentence-transformers>=2.7",
  "wandb>=0.16"
]
dev = [
  "pytest",
  "ruff",
  "mypy",
  "pre-commit"
]

[project.scripts]
ega = "ega.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q -m 'not integration'"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: manual integration tests that may download real models",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["D203", "D212"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D101", "D102", "D103"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
warn_unused_configs = true
mypy_path = "src"
packages = ["ega"]
